--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   justify-content: center;
   font-size: calc(14px + 2vmin);
   color: #C8F073;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gil', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .App-body {
   background-color: #637850;
